--- a/style/style_default.css
+++ b/style/style_default.css
@@ -84,7 +84,7 @@ footer{
     bottom: 0px;
     z-index: 9999;
     color:white;
-    font-size: 3vh;
+    font-size: 1.5rem;
     background: linear-gradient(360deg, #1d1d21, #24252A);
     text-align: center;
     vertical-align: bottom;
