--- a/style/style_default.css
+++ b/style/style_default.css
@@ -87,7 +87,7 @@ footer{
     font-size: 1.5rem;
     background: linear-gradient(360deg, #1d1d21, #24252A);
     text-align: center;
-    vertical-align: bottom;
+    vertical-align: center;
     padding: 1vh;
 }
 ::-webkit-scrollbar{
