--- a/style/style_contact.css
+++ b/style/style_contact.css
@@ -6,9 +6,32 @@
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
-    height: 50%;
-    border: 2px solid white;
-    border-radius: 15px;
+    width: 500px;
+    height: 500px;
     padding: 1em;
+    text-align: center;
+    color: white;
+}
+input, textarea{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+input[type="text"]{
+    width: 350px;
+    height: 35px;
+    text-align: center;
+    outline: none;
+    border-radius: 5px;
+    background: rgba(14, 14, 15, 0.5);
+    color: white;
+    border: 2px solid rgba(0, 136, 169, 1);
+}
+textarea{
+    width: 350px;
+    height: 175px;
+    outline: none;
+    background: rgba(14, 14, 15, 0.5);
+    color: white;
+    border: 2px solid rgba(0, 136, 169, 1);
+    padding: 10px;
 }
