--- a/style/style_contact.css
+++ b/style/style_contact.css
@@ -34,4 +34,23 @@ textarea{
     color: white;
     border: 2px solid rgba(0, 136, 169, 1);
     padding: 10px;
+    border-radius: 15px;
+}
+input[type="submit"]{
+    width: 250px;
+    height: 35px;
+    outline: none;
+    color: white;
+    background: rgba(0, 136, 169, 0.7);
+    border: 2px solid rgba(0, 136, 169, 0.8);
+    border-radius: 15px;
+    font-size: 25px;
+
+    -webkit-box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.75);
+}
+input[type="submit"]:hover{
+    background: rgba(0, 136, 169, 0.5);
+    border: 1px solid rgba(0, 136, 169, 0.6);
 }
