--- a/style/style_default.css
+++ b/style/style_default.css
@@ -8,7 +8,7 @@
 }
 body{
     background-color: #24252A;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', monospace;
 
 }
 .wrapper{
@@ -19,7 +19,7 @@ body{
     Nawigacja
 */
 .nav_lnk li,.nav_link,.con button{
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', monospace;
     font-weight: 500;
     font-size: 16px;
     color: #edf0f1;
@@ -46,7 +46,7 @@ header{
 }
 .nav_lnk li{
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0 20px;
 }
 .nav_lnk li:first-child{
     padding-left: 0;
@@ -80,8 +80,8 @@ footer{
     height: 5vh;
     width: 100%;
     position: fixed;
-    left: 0px;
-    bottom: 0px;
+    left: 0;
+    bottom: 0;
     z-index: 9999;
     color:white;
     font-size: 1.5rem;
