--- a/style/style_contact.css
+++ b/style/style_contact.css
@@ -45,10 +45,11 @@ input[type="submit"]{
     border: 2px solid rgba(0, 136, 169, 0.8);
     border-radius: 15px;
     font-size: 25px;
+    transition: all 0.3s ease 0s;
 
-    -webkit-box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0 0 7px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0 0 7px 2px rgba(0,0,0,0.75);
+    box-shadow: 0 0 7px 2px rgba(0,0,0,0.75);
 }
 input[type="submit"]:hover{
     background: rgba(0, 136, 169, 0.5);
