--- a/style/style_contact.css
+++ b/style/style_contact.css
@@ -15,6 +15,10 @@
 input, textarea{
     margin-top: 10px;
     margin-bottom: 10px;
+
+    -webkit-box-shadow: 0 0 15px 0 rgba(0,117,145,1);
+    -moz-box-shadow: 0 0 15px 0 rgba(0,117,145,1);
+    box-shadow: 0 0 15px 0 rgba(0,117,145,1);
 }
 input[type="text"]{
     width: 350px;
@@ -35,6 +39,8 @@ textarea{
     border: 2px solid rgba(0, 136, 169, 1);
     padding: 10px;
     border-radius: 15px;
+
+
 }
 input[type="submit"]{
     width: 250px;
@@ -47,11 +53,12 @@ input[type="submit"]{
     font-size: 25px;
     transition: all 0.3s ease 0s;
 
-    -webkit-box-shadow: 0 0 7px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0 0 7px 2px rgba(0,0,0,0.75);
-    box-shadow: 0 0 7px 2px rgba(0,0,0,0.75);
 }
 input[type="submit"]:hover{
     background: rgba(0, 136, 169, 0.5);
     border: 1px solid rgba(0, 136, 169, 0.6);
+
+    -webkit-box-shadow: 0 0 15px 0 rgba(0,117,145,0.8);
+    -moz-box-shadow: 0 0 15px 0 rgba(0,117,145,0.8);
+    box-shadow: 0 0 15px 0 rgba(0,117,145,0.8);
 }
