--- a/style/style_projects.css
+++ b/style/style_projects.css
@@ -16,8 +16,24 @@
     overflow: hidden;
     padding: 10px;
     color: white;
+    position: relative;
 
     -webkit-box-shadow: 0 0 15px 0 rgba(0,117,145,1);
     -moz-box-shadow: 0 0 15px 0 rgba(0,117,145,1);
     box-shadow: 0 0 15px 0 rgba(0,117,145,1);
+}
+#clip1{
+    -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+#project-info{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 15px;
+    font-size: 1.2rem;
 }
