--- a/style/style_projects.css
+++ b/style/style_projects.css
@@ -22,7 +22,7 @@
     -moz-box-shadow: 0 0 15px 0 rgba(0,117,145,1);
     box-shadow: 0 0 15px 0 rgba(0,117,145,1);
 }
-#clip1{
+.clip{
     -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     position: absolute;
@@ -30,10 +30,14 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
-#project-info{
+.project-info{
     position: absolute;
     top: 0;
     left: 0;
     padding: 15px;
     font-size: 1.2rem;
+}
+.project-name{
+    color: rgba(0, 136, 169, 1);
+    font-size: 1.5rem;
 }
